tests/snapshots/code_text_fallback_param__code_text_fallback_sample_py_detailed.snap
---
source: tests/code_text_fallback_param.rs
assertion_line: 80
expression: out
---
def greet(name: str):
  … 1 more lines …
… 3 more lines …
… 1 more lines …
… 8 more lines …
