tests/snapshots/code_text_fallback_param__code_text_fallback_sample_py_detailed_combined.snap
---
source: tests/code_text_fallback_param.rs
expression: snap
---
STDOUT:
def greet(name: str):
  … 1 more lines …
  … 3 more lines …
… 1 more lines …
  … 8 more lines …

DEBUG (normalized):
{
  "budgets_effective": {
    "bytes": 120,
    "chars": null,
    "lines": null
  },
  "counts": {
    "included": 0,
    "omitted_children": 7,
    "total_nodes": 0
  },
  "output_stats": {
    "bytes": 112,
    "chars": 0,
    "lines": 6
  },
  "renderer": {
    "array_sampler": "default",
    "prefer_tail_arrays": false,
    "style": "detailed",
    "template": "text"
  },
  "root": {
    "children": [
      {
        "children": [
          {
            "atomic_token": "def greet(name: str):",
            "id": 0,
            "index_in_parent_array": 0,
            "kind": "number",
            "metrics": {}
          },
          {
            "id": 0,
            "index_in_parent_array": 1,
            "kind": "array",
            "metrics": {
              "array_len": 1
            }
          }
        ],
        "id": 0,
        "index_in_parent_array": 0,
        "kind": "array",
        "metrics": {
          "array_len": 2
        }
      },
      {
        "id": 0,
        "index_in_parent_array": 4,
        "kind": "array",
        "metrics": {
          "array_len": 1
        }
      },
      {
        "id": 0,
        "index_in_parent_array": 9,
        "kind": "array",
        "metrics": {
          "array_len": 2
        }
      }
    ],
    "gaps": [
      {
        "before_child_index": 1,
        "omitted_count": 3
      },
      {
        "before_child_index": 2,
        "omitted_count": 4
      }
    ],
    "id": 0,
    "kind": "array",
    "metrics": {
      "array_len": 10
    }
  },
  "selection": {
    "top_k": 6
  },
  "template": "text"
}
