tests/snapshots/code_text_fallback_param__code_text_fallback_sample_py_detailed_json.snap
---
source: tests/code_text_fallback_param.rs
assertion_line: 113
expression: out_json
---
[
  [ /* 2 more items */ ],
  /* 3 more items */
  [ /* 1 more items */ ]
  /* 8 more items */
]
