tests/snapshots/code_text_fallback_param__code_text_fallback_sample_py_strict_combined.snap
---
source: tests/code_text_fallback_param.rs
expression: snap
---
STDOUT:
def greet(name: str):
    print(f"Hello, {name}")

def compute(n: int) -> int:



if __name__ == "__main__":
    main()

DEBUG (normalized):
{
  "budgets_effective": {
    "bytes": 120,
    "chars": null,
    "lines": null
  },
  "constrained_by": [
    "bytes"
  ],
  "counts": {
    "included": 0,
    "omitted_children": 4,
    "total_nodes": 0
  },
  "output_stats": {
    "bytes": 120,
    "chars": 0,
    "lines": 10
  },
  "renderer": {
    "array_sampler": "default",
    "prefer_tail_arrays": false,
    "style": "strict",
    "template": "text"
  },
  "root": {
    "children": [
      {
        "children": [
          {
            "atomic_token": "def greet(name: str):",
            "id": 0,
            "index_in_parent_array": 0,
            "kind": "string",
            "metrics": {}
          },
          {
            "children": [
              {
                "atomic_token": "    print(f\"Hello, {name}\")",
                "id": 0,
                "index_in_parent_array": 0,
                "kind": "string",
                "metrics": {}
              }
            ],
            "id": 0,
            "index_in_parent_array": 1,
            "kind": "array",
            "metrics": {
              "array_len": 1
            }
          }
        ],
        "id": 0,
        "index_in_parent_array": 0,
        "kind": "array",
        "metrics": {
          "array_len": 2
        }
      },
      {
        "children": [
          {
            "atomic_token": "",
            "id": 0,
            "index_in_parent_array": 0,
            "kind": "string",
            "metrics": {}
          }
        ],
        "id": 0,
        "index_in_parent_array": 1,
        "kind": "array",
        "metrics": {
          "array_len": 1
        }
      },
      {
        "children": [
          {
            "atomic_token": "def compute(n: int) -> int:",
            "id": 0,
            "index_in_parent_array": 0,
            "kind": "string",
            "metrics": {}
          },
          {
            "id": 0,
            "index_in_parent_array": 1,
            "kind": "array",
            "metrics": {
              "array_len": 1
            }
          },
          {
            "id": 0,
            "index_in_parent_array": 3,
            "kind": "array",
            "metrics": {
              "array_len": 1
            }
          }
        ],
        "gaps": [
          {
            "before_child_index": 2,
            "omitted_count": 1
          }
        ],
        "id": 0,
        "index_in_parent_array": 3,
        "kind": "array",
        "metrics": {
          "array_len": 4
        }
      },
      {
        "children": [
          {
            "atomic_token": "",
            "id": 0,
            "index_in_parent_array": 0,
            "kind": "string",
            "metrics": {}
          }
        ],
        "id": 0,
        "index_in_parent_array": 4,
        "kind": "array",
        "metrics": {
          "array_len": 1
        }
      },
      {
        "children": [
          {
            "atomic_token": "",
            "id": 0,
            "index_in_parent_array": 0,
            "kind": "string",
            "metrics": {}
          }
        ],
        "id": 0,
        "index_in_parent_array": 5,
        "kind": "array",
        "metrics": {
          "array_len": 1
        }
      },
      {
        "children": [
          {
            "atomic_token": "",
            "id": 0,
            "index_in_parent_array": 0,
            "kind": "string",
            "metrics": {}
          }
        ],
        "id": 0,
        "index_in_parent_array": 8,
        "kind": "array",
        "metrics": {
          "array_len": 1
        }
      },
      {
        "children": [
          {
            "atomic_token": "if __name__ == \"__main__\":",
            "id": 0,
            "index_in_parent_array": 0,
            "kind": "string",
            "metrics": {}
          },
          {
            "children": [
              {
                "atomic_token": "    main()",
                "id": 0,
                "index_in_parent_array": 0,
                "kind": "string",
                "metrics": {}
              }
            ],
            "id": 0,
            "index_in_parent_array": 1,
            "kind": "array",
            "metrics": {
              "array_len": 1
            }
          }
        ],
        "id": 0,
        "index_in_parent_array": 9,
        "kind": "array",
        "metrics": {
          "array_len": 2
        }
      }
    ],
    "gaps": [
      {
        "before_child_index": 2,
        "omitted_count": 1
      },
      {
        "before_child_index": 5,
        "omitted_count": 2
      }
    ],
    "id": 0,
    "kind": "array",
    "metrics": {
      "array_len": 10
    }
  },
  "selection": {
    "top_k": 21
  },
  "template": "text"
}
