tests/snapshots/code_text_fallback_param__code_text_fallback_sample_sh.snap
---
source: tests/code_text_fallback_param.rs
assertion_line: 77
expression: out
---
#!/usr/bin/env bash

greet() {
local name="$1"
…
…
done
echo "$total"
}

main() {
…
…
…

main "$@"

…
