tests/snapshots/code_text_fallback_param__code_text_fallback_sample_sh_default_combined.snap
---
source: tests/code_text_fallback_param.rs
expression: snap
---
STDOUT:
#!/usr/bin/env bash

greet() {
  …
  …
  …
compute() {
…
}

main() {
  greet "world"
…
  …
main "$@"

  …

DEBUG (normalized):
{
  "budgets_effective": {
    "bytes": 120,
    "chars": null,
    "lines": null
  },
  "constrained_by": [
    "bytes"
  ],
  "counts": {
    "included": 0,
    "omitted_children": 9,
    "total_nodes": 0
  },
  "output_stats": {
    "bytes": 120,
    "chars": 0,
    "lines": 18
  },
  "renderer": {
    "array_sampler": "default",
    "prefer_tail_arrays": false,
    "style": "default",
    "template": "text"
  },
  "root": {
    "children": [
      {
        "children": [
          {
            "atomic_token": "#!/usr/bin/env bash",
            "id": 0,
            "index_in_parent_array": 0,
            "kind": "number",
            "metrics": {}
          }
        ],
        "id": 0,
        "index_in_parent_array": 0,
        "kind": "array",
        "metrics": {
          "array_len": 1
        }
      },
      {
        "children": [
          {
            "atomic_token": "",
            "id": 0,
            "index_in_parent_array": 0,
            "kind": "number",
            "metrics": {}
          }
        ],
        "id": 0,
        "index_in_parent_array": 1,
        "kind": "array",
        "metrics": {
          "array_len": 1
        }
      },
      {
        "children": [
          {
            "atomic_token": "greet() {",
            "id": 0,
            "index_in_parent_array": 0,
            "kind": "number",
            "metrics": {}
          },
          {
            "id": 0,
            "index_in_parent_array": 1,
            "kind": "array",
            "metrics": {
              "array_len": 1
            }
          },
          {
            "id": 0,
            "index_in_parent_array": 2,
            "kind": "array",
            "metrics": {
              "array_len": 1
            }
          }
        ],
        "id": 0,
        "index_in_parent_array": 2,
        "kind": "array",
        "metrics": {
          "array_len": 3
        }
      },
      {
        "children": [
          {
            "atomic_token": "compute() {",
            "id": 0,
            "index_in_parent_array": 0,
            "kind": "number",
            "metrics": {}
          }
        ],
        "id": 0,
        "index_in_parent_array": 5,
        "kind": "array",
        "metrics": {
          "array_len": 6
        },
        "omitted_after": 5
      },
      {
        "children": [
          {
            "atomic_token": "}",
            "id": 0,
            "index_in_parent_array": 0,
            "kind": "number",
            "metrics": {}
          }
        ],
        "id": 0,
        "index_in_parent_array": 6,
        "kind": "array",
        "metrics": {
          "array_len": 1
        }
      },
      {
        "children": [
          {
            "atomic_token": "",
            "id": 0,
            "index_in_parent_array": 0,
            "kind": "number",
            "metrics": {}
          }
        ],
        "id": 0,
        "index_in_parent_array": 7,
        "kind": "array",
        "metrics": {
          "array_len": 1
        }
      },
      {
        "children": [
          {
            "atomic_token": "main() {",
            "id": 0,
            "index_in_parent_array": 0,
            "kind": "number",
            "metrics": {}
          },
          {
            "children": [
              {
                "atomic_token": "  greet \"world\"",
                "id": 0,
                "index_in_parent_array": 0,
                "kind": "number",
                "metrics": {}
              }
            ],
            "id": 0,
            "index_in_parent_array": 1,
            "kind": "array",
            "metrics": {
              "array_len": 1
            }
          }
        ],
        "id": 0,
        "index_in_parent_array": 8,
        "kind": "array",
        "metrics": {
          "array_len": 2
        }
      },
      {
        "id": 0,
        "index_in_parent_array": 9,
        "kind": "array",
        "metrics": {
          "array_len": 3
        }
      },
      {
        "id": 0,
        "index_in_parent_array": 12,
        "kind": "array",
        "metrics": {
          "array_len": 1
        }
      },
      {
        "children": [
          {
            "atomic_token": "main \"$@\"",
            "id": 0,
            "index_in_parent_array": 0,
            "kind": "number",
            "metrics": {}
          }
        ],
        "id": 0,
        "index_in_parent_array": 13,
        "kind": "array",
        "metrics": {
          "array_len": 1
        }
      },
      {
        "children": [
          {
            "atomic_token": "",
            "id": 0,
            "index_in_parent_array": 0,
            "kind": "number",
            "metrics": {}
          }
        ],
        "id": 0,
        "index_in_parent_array": 14,
        "kind": "array",
        "metrics": {
          "array_len": 1
        }
      }
    ],
    "gaps": [
      {
        "before_child_index": 3,
        "omitted_count": 2
      },
      {
        "before_child_index": 8,
        "omitted_count": 2
      }
    ],
    "id": 0,
    "kind": "array",
    "metrics": {
      "array_len": 15
    }
  },
  "selection": {
    "top_k": 25
  },
  "template": "text"
}
